# qfetch

./: Cargo.toml  Makefile  README.md  WakeFileList
.github/workflows/: rust.yml
.wake/: install.Wakefile  main.Wakefile
src/: main.rs
